BUILDING ANGULAR 2 COMPONENTS ON THE FLY

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,10 @@
+<!DOCTYPE html>
 <html>
 <head>
     <title>Angular 2 TypeScript Gulp QuickStart</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
     <!-- 0. Load CSS -->
     <link rel="stylesheet" href="resources/assets/css/app.css">
 
@@ -10,6 +13,7 @@
     <script src="lib/core-js/client/shim.min.js"></script>
 
     <script src="lib/zone.js/dist/zone.js"></script>
+    <script src="lib/zone.js/dist/long-stack-trace-zone.js"></script>
     <script src="lib/reflect-metadata/Reflect.js"></script>
     <script src="lib/systemjs/dist/system.src.js"></script>
 
