--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,9 @@
 
 <!-- 3. Display the application -->
 <body>
-<app>Loading...</app>
+<app>
+  <div class="loader-spiner-07"></div>
+</app>
 </body>
 
 </html>
